missing plugins: Ask the user before spawning a plugin search

Previously, the PackageKit session service implementation would use
Totem's window xid to attach its own dialogs. This however no longer
works in Wayland world.

Instead of attaching a dialog to Totem's window, gnome-software by
default now pops up a Shell notification asking for confirmation before
launching the codec search. This is however just a fallback and the
preferred way is for an app to pop up its own dialog / in-app
notification before starting the codec installation.

This commit implements the confirmation dialog within Totem and passes
down necessary flags to supress the Shell notification in that case.

https://bugzilla.gnome.org/show_bug.cgi?id=744610