src/backend/bacon-video-widget.c
@@ -269,6 +269,7 @@ struct BaconVideoWidgetPrivate
   /* for easy codec installation */
   GList                       *missing_plugins;   /* GList of GstMessages */
   gboolean                     plugin_install_in_progress;
+  GCancellable                *missing_plugins_cancellable;
 
   /* for mounting locations if necessary */
   GCancellable                *mount_cancellable;
@@ -639,7 +640,19 @@ bacon_video_widget_realize (GtkWidget * widget)
   g_signal_connect (G_OBJECT (toplevel), "leave-notify-event",
 		    G_CALLBACK (leave_notify_cb), bvw);
 
+  bvw->priv->missing_plugins_cancellable = g_cancellable_new ();
+  g_object_set_data (G_OBJECT (bvw), "missing-plugins-cancellable",
+		     bvw->priv->missing_plugins_cancellable);
   bacon_video_widget_gst_missing_plugins_setup (bvw);
+}
+
+static void
+bacon_video_widget_unrealize (GtkWidget *widget)
+{
+  BaconVideoWidget *bvw = BACON_VIDEO_WIDGET (widget);
+
+  g_cancellable_cancel (bvw->priv->missing_plugins_cancellable);
+  g_clear_object (&bvw->priv->missing_plugins_cancellable);
 }
 
 static void
@@ -1022,6 +1035,7 @@ bacon_video_widget_class_init (BaconVideoWidgetClass * klass)
   widget_class->get_preferred_width = bacon_video_widget_get_preferred_width;
   widget_class->get_preferred_height = bacon_video_widget_get_preferred_height;
   widget_class->realize = bacon_video_widget_realize;
+  widget_class->unrealize = bacon_video_widget_unrealize;
 
   widget_class->motion_notify_event = bacon_video_widget_motion_notify;
   widget_class->button_press_event = bacon_video_widget_button_press_or_release;
